Documentation also updated for dependecies and vulnerabilities

--- a/toucan/index.html
+++ b/toucan/index.html
@@ -99,6 +99,11 @@
             </div>
           </li>
           <li class="nav-item padding_30_left">
+            <a class="nav-link js-scroll-trigger" href="/toucan/documentation/index.html">
+              Documentation
+            </a>
+          </li>
+          <li class="nav-item padding_30_left">
             <a class="nav-link js-scroll-trigger no-padding-right" onclick="toggleTheme()">
               ◐
             </a>
