--- a/toucan/shop.html
+++ b/toucan/shop.html
@@ -96,6 +96,11 @@
                         </div>
                     </li>
                     <li class="nav-item padding_30_left">
+                        <a class="nav-link js-scroll-trigger" href="/toucan/documentation/index.html">
+                            Documentation
+                        </a>
+                    </li>
+                    <li class="nav-item padding_30_left">
                         <a class="nav-link js-scroll-trigger no-padding-right" onclick="toggleTheme()">
                             ◐
                         </a>
